feat: API Details route.
